--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
+*.iml
 .gradle
-/build/
+/local.properties
+**/build
+.idea
+/captures
 
-# Ignore Gradle GUI config
-gradle-app.setting
+## Fastlane
+# fastlane specific
+fastlane/report.xml
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# deliver temporary files
+fastlane/Preview.html
 
-# Cache of project
-.gradletasknamecache
+# snapshot generated screenshots
+fastlane/screenshots
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# scan temporary files
+fastlane/test_output
+
+#fastlane bundler
+fastlane/Gemfile
+fastlane/Gemfile.lock
+fastlane/.bundle/config
