--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'com.squareup:javapoet:1.9.0'
+    testCompile 'junit:junit:4.12'
     provided 'com.android.tools.build:gradle:1.+'
 }
 
